--- a/.gitignore
+++ b/.gitignore
@@ -4,8 +4,7 @@ override.properties
 
 ### Releases
 # This is where releases are built for upload to GitHub
-release
+/release
 
 ### Composer
-# You shouldn't need to do `composer install`. We only save metadata in composer.json.
-vendor
+/plugins/filesystem/s3/vendor
