--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,14 @@
 		}
 	],
 	"require": {
-		"php": "^7.2||^8.0"
+		"php": "^7.2||^8.0",
+		"akeeba/s3": "^2.0.0"
+	},
+	"config": {
+		"vendor-dir": "plugins/filesystem/s3/vendor",
+		"platform": {
+			"php": "7.4.0"
+		}
 	},
 	"suggest": {}
 }
