--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
 	"name": "akeeba/plg_filesystem_s3",
 	"description": "Integrate Amazon S3, CloudFront and Amazon S3–compatible storage with Joomla!'s Media Manager",
-	"minimum-stability": "stable",
+	"minimum-stability": "dev",
 	"license": "GPL-3.0-or-later",
 	"authors": [
 		{
@@ -12,7 +12,7 @@
 	],
 	"require": {
 		"php": "^7.2||^8.0",
-		"akeeba/s3": "^2.0.0"
+		"akeeba/s3": "dev-development"
 	},
 	"config": {
 		"vendor-dir": "plugins/filesystem/s3/vendor",
